--- a/WineStore/WineStore.csproj
+++ b/WineStore/WineStore.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Wine.cs" />
+    <Compile Include="Data\WineDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
