--- a/WineStore/Web.config
+++ b/WineStore/Web.config
@@ -9,6 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <add name="WineDbContext" connectionString="Data Source=CompHughTer;Initial Catalog=WineStore;Integrated Security=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WineStore-20171025052107.mdf;Initial Catalog=aspnet-WineStore-20171025052107;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
